Vero 4K+ for discourse header
Signed-off-by: Sam Nazarko <email@samnazarko.co.uk>

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -10,5 +10,5 @@ en:
       download: "Download"
       home: "Home"
       shop: "Shop"
-      vero4k: "Vero 4K"
+      vero4k: "Vero 4K +"
       my_account: "My Account"
